<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">약속배팅</string>
    <!--로그인창-->
    <string name="loginT">로그인</string>
    <string name="loginBT">로그인</string>
    <string name="forgotPW">아이디/비밀번호 찾기</string>
    <string name="createAcc">회원가입</string>
    <string name="id_dupli">중복확인</string>
    <!--회원가입창-->
    <string name="reg">가입</string>
    <string name="close">닫기</string>
    <!--코인페이지-->
    <string name="coin_page">코인 충전소</string>
    <string name="go_coin_charge">충전하기</string>
    <string name="after_charge">코인 충전 후</string>
    <!--방생성페이지-->
    <string name="create_room">방 생성하기</string>
    <string name="select_date">날짜 선택하기</string>
    <string name="select_time">시간 선택하기</string>
    <string name="select_location">위치 선택하기</string>
    <string name="select">선택</string>
    <string name="create">생성</string>
    <string name="join_friend">친구초대</string>
    <string name="title_activity_map">map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--방내부-->
    <string name="delete_room">방 삭제</string>
    <string name="vote">투표</string>
    <string name="cancle_promise">방 삭제를 진행 합니다.</string>
    <string name="betting">배팅</string>
    <string name="betting_txt1">배팅을 시작 합니다.</string>
    <string name="betting_txt2">최대 금액 선에서 배팅을 진행해 주세요.</string>
    <string name="betting_txt3">1코인을 배팅하면 관전 상태로 전환됩니다.</string>
    <string name="betting_txt4">0코인을 배팅하면 방이 삭제됩니다.</string>
    <string name="betting_max">최대 배팅 금액</string>
    <string name="curr_betting">배팅 현황</string>


</resources>