<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loginT"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Email">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Password">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="bt_style.xml"
        android:textColor="@color/white"
        android:text="@string/loginBT">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:textSize="17sp"
            android:text="@string/forgotPW">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:text="@string/createAcc"
            android:textSize="17sp"
            android:textColor="@android:color/holo_blue_dark">
        </TextView>

    </LinearLayout>

</LinearLayout>