<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/cardview_dark_background"
            android:gravity="center"
            android:text="@string/betting"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/betting_txt1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/betting_txt2"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/betting_txt3"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/edittext_box_stroke_color"
            android:paddingRight="23dp"
            android:paddingLeft="23dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_betting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="배팅금액"
                android:inputType="number"
                android:textColor="@color/black"
                android:maxLength="9">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/betting_max"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/tv_betting_coin"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="로딩중..."
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#66bdbdbd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/id_vote_against"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="5"
            android:background="#00000000"
            android:gravity="center"
            android:text="배팅!"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>