<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_toolbar2">

    <LinearLayout
        android:id="@+id/create_room_Ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/main_ui"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.Create_Room">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:text="@string/create_room"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lo_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:hintTextColor="@color/color_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_room_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/kingsejong"
                android:hint="방이름"
                android:maxLength="15">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="btn_date_set"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/date_Tview"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/time_set_btn"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="btn_time_set"
                android:text="@string/select_time"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/time_Tview"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="intent_btn_search_local"
                android:text="@string/select_location"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/location_Tview"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="btn_intent_invite_friend"
                android:text="@string/join_friend"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/friends_Tview"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/select_create_room"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:enabled="false"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="btn_create_room"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/kingsejong"
                android:gravity="center"
                android:onClick="create_room_close"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
