<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        tools:context=".view.signup_page">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/createAcc"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"></TextView>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="닉네임"
                android:maxLength="10">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="7"
                app:counterEnabled="true"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/test4_et_ID"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="아이디"
                    android:maxLength="30">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="3"
                android:background="@drawable/round_button"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/id_dupli"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test4_et_PW"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="비밀번호"
                android:inputType="textPassword"
                android:maxLength="15">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test4_et_PWCheck"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="비밀번호 확인"
                android:inputType="textPassword"
                android:maxLength="15">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"

                android:gravity="center"
                android:onClick="Test4_btn_signup"
                android:text="@string/reg"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                ></TextView>

            <TextView
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:onClick="Test4_btn_signup_close"
                android:text="@string/close"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
